# cpprequests

./: .gitignore  .gitmodules  CMakeLists.txt
include/requests/: api.h  const.h  curl.h  exception.h  http.h  models.h  session.h  structures.h  utils.h
include/requests/backend/: libcurl.h
include/requests/extends/: _string.h
include/requests/extends/_string/: _strip.h  _translate.h
include/requests/models/: prepared_request.h  request.h  response.h  session.h  stream.h  url.h
src/: CMakeLists.txt
src/requests/: placeholder.cpp
src/requests/backend/: libcurl.cpp
src/requests/models/: response.cpp
test/: CMakeLists.txt  test_backend_libcurl.cpp  test_get.cpp  test_head.cpp  test_post.cpp  test_requests.cpp  test_string_extend.cpp  test_url.cpp
