CMAKE_MINIMUM_REQUIRED(VERSION 3.13 FATAL_ERROR)
PROJECT(crq LANGUAGES C CXX)

FILE(GLOB_RECURSE SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
MESSAGE("Source file found: ${SRC_FILES}")

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE )

TARGET_COMPILE_FEATURES(${PROJECT_NAME} PUBLIC cxx_std_17)
